--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.6",
     "bootstrap": "^4.6.0",
     "install": "^0.13.0",
+    "ngx-bootstrap": "^6.2.0",
     "npm": "^7.7.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
